# artifact-report

./: .gitmodules  install_deps.sh
ILLIXR_SSIM_FLIP/FLIP/: desktop.txt  jetson-lp.txt
ILLIXR_SSIM_FLIP/SSIM/desktop-ssim/: ssimScore.txt-289-339-gt+18
ILLIXR_SSIM_FLIP/SSIM/jetsonhp-ssim/: ssimScore.txt-289-154-gt+36
ILLIXR_SSIM_FLIP/SSIM/jetsonlp-ssim/: ssimScore.txt-289-62
report/: appendix.tex  builder.sh  flake.nix  main.tex  notes.md  real_build.sh  result
upload/: hp_mode.txt  lp_mode.txt
upload/ILLIXR-Evaluation/: README.md  clean.py
upload/ILLIXR-Evaluation/alignTrajectory/: run.py
upload/ILLIXR-Evaluation/alignTrajectory/utils/: findStartIndex.py  formatToEuroc.py
upload/ILLIXR-Evaluation/alignTrajectory/utils/align-trajectory/: CMakeLists.txt  Makefile
upload/ILLIXR-Evaluation/alignTrajectory/utils/align-trajectory/include/: AlignTrajectory.h  AlignUtils.h
upload/ILLIXR-Evaluation/alignTrajectory/utils/align-trajectory/src/: main.cpp
upload/ILLIXR-Evaluation/offlineTimewarp/: run.py
upload/ILLIXR-Evaluation/runEvaluation/: run.py
upload/ILLIXR-Evaluation/runEvaluation/ssim-gpu/: CMakeLists.txt  Makefile  computeSSIM.cpp
upload/ILLIXR_SSIM_FLIP/FLIP/: cal_average_weighted_mean.py  jetson-hp.txt
upload/OpenXR-Apps/demo/: Main.tscn  export_presets.cfg  hologram_stats.txt  project.godot
upload/OpenXR-Apps/materials/: material_tester.tscn  project.godot
upload/OpenXR-Apps/platformer/: project.godot
upload/OpenXR-Apps/sponza/: README.md  export_presets.cfg  project.godot
upload/report/: flake.nix
(+107 files in other folders)
